# pyside_test

./: .gitignore  .gitmodules  data.json  main.py  node_edit.py  tree_edit.py
log/: __init__.py  logging.conf  signal_log_handler.py
native/: CMakeLists.txt  __init__.py  cppmod.cpp
style/: dark.qss
widgets/: __init__.py  main_window_base.py  node_base.py  node_scene.py  simple_output_widget.py  treeitem.py  treemodel.py  treeview.py
